-*- coding: utf-8-unix -*-

		     MMUX Removable Media Utilities
		     ==============================

Version 2.0.0
-------------

* Updated to MBFL at least v3.0.0-devel.4.

* Added automatic generation of terminal completions scripts.


Version 1.2.0
-------------

* Added "phone" script to manage phones mounted as USB devices.


### end of file
# Local Variables:
# mode: text
# fill-column: 72
# paragraph-start: "*"
# ispell-local-dictionary: "en_GB"
# End: