@@ -10,6 +10,10 @@ Version 2.0.0
 
 * Added automatic generation of terminal completions scripts.
 
+* Total scripts review.
+
+* Added selection of mount points from the "configure" script.
+
 
 Version 1.2.0
 -------------
